--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.6.8",
     "@grpc/proto-loader": "^0.7.0",
+    "client": "file:",
+    "readline": "^1.3.0",
     "readline-sync": "^1.4.10"
   }
 }
