--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.6.8",
-    "@grpc/proto-loader": "^0.7.0"
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.0",
+    "server": "file:"
   }
 }
